Revert "hlte: overlay: Add CDMA values to config_radio_access_family"
This reverts commit d53e659422ea2ee4ba0614d0b6bf44c94844b9b8.

* This build does not need CDMA capability

Change-Id: I25c0780c14eaf4900efc9b42ba95ec8d73892829

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -2,7 +2,7 @@
 <!--
 /*
 ** Copyright 2011, The Android Open Source Project
-** Copyright 2017, The LineageOS Project
+** Copyright 2017-2018, The LineageOS Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -25,7 +25,7 @@
          Empty is viewed as "all".  Only used on devices which
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
          format is UMTS|LTE|... -->
-    <string translatable="false" name="config_radio_access_family">LTE|CDMA|EVDO|GSM|WCDMA</string>
+    <string translatable="false" name="config_radio_access_family">GSM|WCDMA|LTE</string>
 
     <!-- Config determines whether to update phone object when voice registration
          state changes. Voice radio tech change will always trigger an update of
